SqlSourcesにクラス名だけでなくClassSourceをもたせる